compiler/testData/diagnostics/tests/secondaryConstructors/kt6994.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class X<T> {
    constructor(t: T, i: Int): this(<!TYPE_MISMATCH!>i<!>, 1)
}
